--- a/index.html
+++ b/index.html
@@ -4,10 +4,51 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>G3 Architects</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    
+    <header class="header">
+        <nav class="navbar">
+            <h3 class="navbar-title">G3 Architects</h3>
+            <ul>
+                <li>Home</li>
+                <li>About</li>
+                <li>Contact us</li>
+                <li>Login</li>
+            </ul>
+        </nav>
+        <!-- banner section -->
+        <div class="banner">
+            <div>
+                <h2 class="banner-title">Brand New 
+                    Group of Architects 
+                    </h2>
+                <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+            </div>
+            <button class="btn-primary">Explore More</button>
+            <div class="banner-img">
+                <img src="images/banner.png" alt="">
+            </div>
+        </div>
+    </header>
+    <!-- main section -->
+
+    <main>
+        <!-- section list of feature -->
+        <section class="list-of-feature">
+            <div class="list-of-photos">
+                <img src="images/team1.png" alt="">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+                <img src="images/team4.png" alt="">
+            </div>
+            <div class="features">
+                <h3><span class="quick">Quick list</span><span class="our"> of Our</span><span class="feature"> Features</span></h3>
+                <p class="features-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn-simple">Explore Now</button>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
